# jvm-attach

./: .editorconfig  .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
examples/: build.gradle
examples/src/main/java/com/mageddo/jvm/attach/: Main.java
jattach/: CMakeLists.txt  README.md
jattach/src/: jar_loader_agent.cpp  jattach.h  jattach_jni.cpp  jattach_main.c  jattach_main.cpp  jattach_posix.c  jattach_windows.c  simple_agent.cpp
jvm-attach/: README.md  build.gradle  nexus.gradle
jvm-attach/src/main/java/com/mageddo/jattach/: Jattach.java  JattachClient.java  Main.java
jvm-attach/src/main/java/com/mageddo/jvm/attach/: IoUtils.java  Jattach.java  JattachClient.java  JvmArch.java  JvmAttach.java  Main.java  Os.java  Platform.java
jvm-attach/src/main/java/com/mageddo/platform/: JvmArch.java  Os.java  Platform.java
jvm-attach/src/test/java/com/mageddo/jvm/attach/: JvmAttachTest.java
jvm-attach/src/test/java/testing/: JarMaker.java  JarPath.java
jvm-attach/src/test/resources/: libsimple_agent.md  simple-agent.md
simple-agent/: build.gradle
simple-agent/src/main/java/com/mageddo/agent/: SimpleAgent.java
